# FlashAttention

./: CMakeLists.txt  README.md
include/common/: common.cuh  cuda_timer.cuh  logging.h  tensor.cuh  tester.cuh  util.cuh
include/kernel/flash_attn_v2/: flash_fwd_kernel.cuh  flash_fwd_launch_template.cuh  softmax.cuh
include/ops/: flash_attn.cuh  flash_attn_v2.cuh
src/: main.cu
src/kernel/flash_attn_v2/: flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_hdim160_fp16_sm80.cu  flash_fwd_hdim192_fp16_sm80.cu  flash_fwd_hdim224_fp16_sm80.cu  flash_fwd_hdim256_fp16_sm80.cu  flash_fwd_hdim32_fp16_sm80.cu  flash_fwd_hdim64_fp16_sm80.cu  flash_fwd_hdim96_fp16_sm80.cu
src/ops/: flash_attn.cu  flash_attn_v2.cu
